--- a/nginx.conf
+++ b/nginx.conf
@@ -28,7 +28,7 @@ http {
     proxy_cache_path /tmp/nginx-cache levels=1:2 keys_zone=static:64m max_size=512m use_temp_path=off;
 
     server {
-        set $origin_url https://example.com;
+        set $origin_url https://github.com;
         listen       8080 default_server;
         server_name  _;
         port_in_redirect        off;
